fixed fragment jump

--- a/frontend/src/app/components/home/home.component.css
+++ b/frontend/src/app/components/home/home.component.css
@@ -31,3 +31,10 @@ section {
     margin-top: 100px;
     margin-bottom: 100px;
 }
+
+footer {
+    height: 100px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
